config/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-api
spec:
  selector:
    app: lb-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
