config/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-web
spec:
  selector:
    app: lb-web
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: NodePort
