config/ingress-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lb-api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "api-static-ip"
    networking.gke.io/managed-certificates: "api-certificate"
    kubernetes.io/ingress.allow-http: "false"
spec:
  backend:
    serviceName: lb-api
    servicePort: 8080
